--- a/puzzle-1-trebuchet/Cargo.toml
+++ b/puzzle-1-trebuchet/Cargo.toml
@@ -6,3 +6,5 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+concat_strs = "1.0.2"
+regex = "1.10.2"
